# axum-api

./: Cargo.toml  PERFORMANCE.md  README.md  docker-compose.yml
migrations/: 001_create_todos_table.sql
src/: app.rs  doc.rs  error.rs  lib.rs  main.rs  state.rs
src/api/handlers/: health.rs  mod.rs  todo_handlers.rs
src/application/todos/: mod.rs
src/application/todos/create_todo/: mod.rs
src/application/todos/delete_todo/: mod.rs
src/application/todos/get_todo/: mod.rs
src/application/todos/list_todos/: mod.rs
src/application/todos/update_todo/: mod.rs
src/domain/: mod.rs
src/domain/todos/: mod.rs
src/domain/todos/entities/: todo.rs
src/domain/todos/traits/: mod.rs
src/domain/todos/value_objects/: mod.rs
src/infrastructure/database/repositories/: mod.rs  postgres_todo_repository.rs
tests/api/handlers/: health_tests.rs  todo_handlers_tests.rs
tests/application/todos/: create_todo_tests.rs  get_todo_tests.rs  list_todos_tests.rs
tests/domain/todos/entities/: todo_tests.rs
tests/domain/todos/value_objects/: value_objects_tests.rs
