[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
utoipa = { version = "4", features = ["uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"
